# DiscretizedLloyd

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous.yml
models/: bunny.ply  hippo2.ply  hippo2.vfield  hippo2_aniso.vfield  plane_aniso.vfield  torso.ffield  torso.vfield  torso_aniso.vfield
report/plots/: hist_plot.py  parallel_plot.py  performance_test_1024.csv  performance_test_16.csv  runs_log.csv
src/: application.hpp  batch_performance_stats.hpp  consts.hpp  dijkstra_partitioner.hpp  main.cpp  model.hpp  performance_stats.hpp  stopwatch.hpp  tangent_field.hpp  tangent_space.hpp
